--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project1",
   "version": "1.0.0",
   "description": "Texas Hold'em Game",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/wtcrowe4/Project1#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "phe": "^0.6.0"
+    "phe": "^0.6.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
